pkl-core/src/test/files/LanguageSnippetTests/input/errors/invalidTypeName1.pkl
local base = import("pkl:base")
listing = new base.Listing {}
